# notlink-tutorial

./: .env  Cargo.toml  README.md  Secrets.toml  apitest.md  diesel.toml  shuttle_setup_container.sh
.shuttle/: config.toml
src/: main.rs
src/db/: models.rs  operations.rs  schema.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/utils/: crypto.rs  keys.rs
